<resources>
    <string name="app_name">敲敲</string>
    <string name="app_team">敲敲团队</string>
    <string name="start">开始</string>
    <string name="skip">跳过</string>
    <string name="action_settings">设置</string>
    <string name="mobile_phone_number_already_exists">手机号码已经存在</string>
    <string name="main_activity_tab_message">消息</string>
    <string name="main_activity_tab_message_description">消息</string>
    <string name="main_activity_tab_relationship">关系</string>
    <string name="main_activity_tab_relationship_description">关系</string>
    <string name="main_activity_tab_dynamic">动态</string>
    <string name="main_activity_tab_dynamic_description">动态</string>
    <string name="main_activity_tab_friends">好友</string>
    <string name="main_activity_tab_friends_description">好友</string>
    <string name="main_activity_tab_discover">发现</string>
    <string name="main_activity_tab_discover_description">发现</string>
    <string name="main_activity_tab_labels">标签</string>
    <string name="main_activity_tab_labels_description">标签</string>
    <string name="input_mobile_phone_number_or_label">输入手机号或者敲敲号</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_or_register">注册&#160;·&#160;登录</string>
    <string name="sign_in_register">注册登录</string>
    <string name="sign_in_prompt">识别不了您的身份，是否先注册或登录？</string>
    <string name="register">注册</string>
    <string name="register_setting">设置</string>
    <string name="forgot_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="passwd">请设置最少6位含数字字母密码</string>
    <string name="reconfirm_passwd">请再次输入密码</string>
    <string name="submit">确定</string>
    <string name="read_and_agree">阅读并同意</string>
    <string name="privacy_agreement">隐私条款、用户协议</string>
    <string name="terms">服务条款</string>
    <string name="phone_number">手机号码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="back">返回</string>
    <string name="send_message">发消息</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="he">他</string>
    <string name="her">她</string>
    <string name="label_code">敲敲号</string>
    <string name="other_login_method">其他方式登录</string>
    <string name="contact">好友</string>
    <string name="message">消息</string>
    <string name="find_friend">找好友</string>
    <string name="select">选择</string>
    <string name="me">我</string>
    <string name="pay_attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="group_send">群发</string>
    <string name="crash_exit">程序出错，即将退出&#8230;</string>
    <string name="add">添加</string>
    <string name="settings">个人设置</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_contact_tip">请留下您的联系方式，方便我们答复您（可以是电话、QQ、微信或邮箱）</string>
    <string name="inviting_friend">邀请好友</string>
    <string name="empty_account_or_password">用户名或密码为空</string>
    <string name="login_failure">登录失败，请检查用户名和密码</string>
    <string name="third_platform_oauth_failure">第三方平台登录失败</string>
    <string name="illegal_phone_number">手机号码不合法</string>
    <string name="add_my_labels">添加我的标签</string>
    <string name="delete">删除</string>
    <string name="add_friend">添加好友</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="btn_true">是</string>
    <string name="btn_false">否</string>
    <string name="modify">修改</string>
    <string name="view_relative_label">查看关联标签</string>
    <string name="delete_label">删除标签</string>
    <string name="close">关闭</string>
    <string name="send">发送</string>
    <string name="abandon">舍弃</string>
    <string name="save">保存</string>
    <string name="bind_account">绑定手机</string>
    <string name="oauth_bind_success">绑定成功</string>
    <string name="oauth_bind_failure">绑定失败</string>
    <string name="oauth_bind_verify_code_wrong">验证码错误，绑定失败</string>
    <string name="oauth_bind_verify_code_expired">验证码已过期，绑定失败</string>
    <string name="operation_not_need">您无需进行此操作</string>
    <string name="guide_done">知道了</string>
    <string name="talk_a_while">先聊聊</string>
    <string name="unfowllow">取消关注</string>
    <string name="chat">聊天</string>
    <string name="invite">敲一敲</string>
    <string name="invitation">打招呼</string>
    <string name="add_stranger">加好友</string>
    <string name="invite_message">给你打招呼了</string>
    <string name="personal_detail">资料</string>
    <string name="label">标签</string>
    <string name="photo">照片</string>
    <string name="has_follow">已关注</string>
    <string name="follow_each_other">已互相关注</string>
    <string name="send_identify_code">获取验证码</string>
    <string name="identify_code_colon">验证码：</string>
    <string name="input_identify_code">请输入验证码</string>
    <string name="mobile_register">手机注册</string>
    <string name="send_identify_code_to_phone">验证码短信已发送至手机：%1$s</string>
    <string name="resend_identify_code">重新获取</string>
    <string name="resend_identify_code_time_count">重新获取(%1$ds)</string>
    <string name="send_verify_code_success">发送验证码成功</string>
    <string name="send_verify_code_failed">发送验证码失败</string>
    <string name="verify_code_not_expired">验证码未过期</string>
    <string name="mobile_not_exist">手机号码不存在</string>
    <string name="mobile_registered">手机号已注册</string>
    <string name="set_password">设置密码</string>
    <string name="phone_colon">手机号：</string>
    <string name="old_password_colon">旧密码：</string>
    <string name="input_old_password_hit">请输入旧密码</string>
    <string name="account_colon">帐&#160;&#160;号：</string>
    <string name="password_colon">密&#160;&#160;码：</string>
    <string name="account_hint">敲敲号/手机号</string>
    <string name="input_password_colon">设置密码：</string>
    <string name="password_confirm_colon">再次输入：</string>
    <string name="enter_password_prompt">6&#8211;20位字母、数字</string>
    <string name="enter_password_confirm_prompt">请再次输入密码</string>
    <string name="enter_new_password_prompt">请输入新密码</string>
    <string name="enter_new_password_confirm_prompt">请再次输入新密码</string>
    <string name="modify_password">修改密码</string>
    <string name="inconformity_input_password">前后输入密码不一致</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="mobile_has_been_registered">手机号码已被注册</string>
    <string name="verify_code_expired">验证码已过期</string>
    <string name="verify_code_wrong">验证码错误</string>
    <string name="modify_password_success">修改密码成功</string>
    <string name="modify_password_failed">修改密码失败</string>
    <string name="nickname_colon">输入昵称：</string>
    <string name="nickname_hint">汉字、字母、数字</string>
    <string name="enter_nickname_prompt">请输入小于10个字的昵称</string>
    <string name="friends_search_edit_hint">请输入关键字</string>
    <string name="no_match_contact">没有匹配的联系人</string>
    <string name="age_format">%1$d岁</string>
    <string name="height_format">%1$dcm</string>
    <string name="unknown">[未知]</string>
    <string name="voice_message">[语音]</string>
    <string name="image_message">[图片]</string>
    <string name="resend_chat_message_confirm">重新发送这条消息吗？</string>
    <string name="cancel_record_prompt">向上滑动取消发送</string>
    <string name="cancel_record_prompt_show">语音已取消发送</string>
    <string name="groupChat">群聊</string>
    <string name="groupInformation">群资料</string>
    <string name="groupNickname">群昵称</string>
    <string name="groupHeadphoto">群头像</string>
    <string name="exitGroup">退群</string>
    <string name="dismissGroup">解散</string>
    <string name="isdismissGroup">确定解散该群？</string>
    <string name="isexitGroup">确定退出该群？</string>
    <string name="exitsuccesegroup">退群成功</string>
    <string name="exitfaildgroup">退群失败</string>
    <string name="dismisssuccesegroup">解散成功</string>
    <string name="dismissfaildgroup">解散失败</string>
    <string name="surplus">剩余  </string>
    <string name="temp_chat_send_tip">非好友临时聊天：在对方回复您之前，您可以给对方发%1$d条消息</string>
    <string name="temp_chat_recv_tip">非好友临时聊天：您回复对方之前，对方只能给您发%1$d条消息</string>
    <string name="add_labels">添加标签</string>
    <string name="labels_add_hint">您还未添加该标签</string>
    <string name="show_label_before">对不起!您还未添加以下标签：</string>
    <string name="show_label_after">是否添加以上标签，并发起群聊？</string>
    <string name="add_as_my_label">是否将其添加为我的标签？</string>
    <string name="labels_add_as_my">您还未添加该标签,是否添加?</string>
    <string name="check_label_story">查看标签故事</string>
    <string name="find_correlation_user">查看标签人群</string>
    <string name="select_label">选择标签</string>
    <string name="search_friend">查找好友</string>
    <string name="search_more_friend">搜索更多好友</string>
    <string name="search_friend_hint">手机号/敲敲号</string>
    <string name="exact_search">标签找好友</string>
    <string name="people_around">附近的人</string>
    <string name="get_game">抓一抓</string>
    <string name="function_label">标签</string>
    <string name="function_delight">乐趣</string>
    <string name="function_look_frends">&#160;&#160;找好友</string>
    <string name="today_recommended">今日推荐</string>
    <string name="bubble_up">冒泡</string>
    <string name="bubble_up_prompt_message">&#160;&#160;&#160;&#160;使用冒泡功能，您就能被现在正在找好友的20个人优先发现。\n&#160;&#160;&#160;&#160;对方还能看到您的地区、年龄、星座、学校信息。</string>
    <string name="bubble_up_prompt_sub_message">（此功能每天限制使用3次）</string>
    <string name="bubble_up_fill_information_prompt_message">&#160;&#160;&#160;&#160;对不起，您需要补充完您的地区、年龄、星座、学校的信息后，才能使用冒泡功能。</string>
    <string name="today_recommended_prompt_message">&#160;&#160;&#160;&#160;使用今日推荐功能，系统会在24小时内，为您推荐3位你可能感兴趣的人。推荐结果会在消息中心发送给您，请耐心等待。</string>
    <string name="today_recommended_prompt_sub_message">（此功能每天限制使用1次）</string>
    <string name="exact_search_prompt_message">&#160;&#160;&#160;&#160;选择一些您感兴趣的标签，您可以搜索到同时满足所选标签的人。</string>
    <string name="select_label_prompt">请选择标签</string>
    <string name="input_mobile_or_label_code_prompt">请输入%1$d位的手机号或大于等于%2$d位的敲敲号</string>
    <string name="search_no_match_user">未找到匹配的用户</string>
    <string name="number_search_no_user">抱歉，无此人，换个号试试？</string>
    <string name="search">搜索</string>
    <string name="label_search_hint">输入歌名</string>
    <string name="label_create_search_hint">搜索、创建标签</string>
    <string name="not_found_label">抱歉，未找到相关标签&#8230;</string>
    <string name="customize_as_my_label_1">创建&#160;\"</string>
    <string name="customize_as_my_label_2">\"&#160;为我的标签</string>
    <string name="not_select_label">您还没有选择标签</string>
    <string name="weekly_hot_label">本周热门标签</string>
    <string name="add_label_success">添加标签成功</string>
    <string name="add_label_failure">添加标签失败</string>
    <string name="delete_label_success">删除标签成功</string>
    <string name="delete_label_failure">删除标签失败</string>
    <string name="label_use_count">%1$d&#160;人</string>
    <string name="friend_detail">好友详情</string>
    <string name="validate_friend">加好友</string>
    <string name="validate_message_hint">请输入请求信息&#8230;</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="reject_message_hint">请输入拒绝信息</string>
    <string name="already_agree">已接受</string>
    <string name="already_reject">已拒绝</string>
    <string name="already_reject_friend_request">已拒绝您的好友请求</string>
    <string name="friend_remark_hint">请输入备注名</string>
    <string name="modify_remark">修改备注名</string>
    <string name="modify_remark_success">修改备注名成功</string>
    <string name="modify_remark_failure">修改备注名失败</string>
    <string name="delete_friend">删除好友</string>
    <string name="delete_friend_confirm">确定要删除该好友吗？</string>
    <string name="delete_friend_success">删除好友成功</string>
    <string name="delete_friend_failure">删除好友失败</string>
    <string name="province_title">省份：</string>
    <string name="city_title">城市：</string>
    <string name="get_need">还需要努力哦</string>
    <string name="get_sorry">很抱歉！</string>
    <string name="get_changes">再抓一个</string>
    <string name="get_cancle">不玩了</string>
    <string name="know">认识</string>
    <string name="story">动态</string>
    <string name="recommend_label">贴标签</string>
</resources>