<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_header"
            style="@style/LabelShowTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/label_show_right_leaf"
            android:gravity="center"
            android:text="@string/label_sample_0" />
    </LinearLayout>

    <include
        layout="@layout/dialog_horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:id="@+id/modify"
        style="@style/DialogOperationTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:visibility="gone" />

    <include layout="@layout/dialog_horizontal_divider" />

    <TextView
        android:id="@+id/delete"
        style="@style/DialogOperationTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_label" />

    <include layout="@layout/dialog_horizontal_divider" />

    <TextView
        android:id="@+id/search_friend"
        style="@style/DialogOperationTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friend" />

    <include layout="@layout/dialog_horizontal_divider" />

    <TextView
        android:id="@+id/relative_label"
        style="@style/DialogOperationTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_relative_label"
        android:visibility="gone" />

    <include layout="@layout/dialog_horizontal_divider" />

    <TextView
        android:id="@+id/close"
        style="@style/DialogOperationTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="@color/colorPrimary" />
</LinearLayout>