<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="44dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/old_password_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/input_state_selector"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/old_password_colon"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_old_password_hit"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:textColor="@color/black"
            android:textColorHint="#ff808080"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_password_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/old_password_area"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_state_selector"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password_colon"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/enter_password_prompt"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:textColor="@color/black"
            android:textColorHint="#ff808080"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_password_confirm_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/new_password_area"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_state_selector"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password_confirm_colon"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/enter_password_confirm_prompt"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:textColor="@color/black"
            android:textColorHint="#ff808080"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/new_password_confirm_area"
        android:layout_marginTop="50dp"
        android:background="@drawable/submit_btn_selector"
        android:clickable="true"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>