<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/titlePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/get_dialog_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/smile"
            />
        <TextView
            android:id="@+id/get_dialog_tittlemessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_sorry"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            style="@style/GetDialogTextStyle"
            />
        <TextView
            android:id="@+id/get_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_need"
            android:layout_marginBottom="30dp"
            android:paddingLeft="5dp"
            style="@style/GetDialogTextStyle"
          />

    </LinearLayout>
    <View
        android:id="@+id/get_dialog_titleDivider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFCCCCCC"
        android:visibility="visible" />


    <Button
        android:id="@+id/get_dialog_lookinfo"
        style="@style/LargeButtonStyle"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:visibility="gone"
        android:text="@string/know" />

    <!--<include-->
        <!--android:id="@+id/failed_divider"-->
        <!--layout="@layout/dialog_horizontal_divider" -->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!---->
        <!--/>-->

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_dismiss"
            style="@style/DialogOperationTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_cancle"
            android:textColor="@color/colorRemarks" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#FFCCCCCC" />
        <TextView
            android:id="@+id/btn_changes"
            style="@style/DialogOperationTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/get_changes"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>