<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="false"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/row_province"
            style="@style/RegionRowStyle">

            <TextView
                android:id="@+id/province_text"
                style="@style/RegionRowTitleStyle"
                android:text="@string/province_title" />

            <Spinner
                android:id="@+id/province_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/row_city"
            style="@style/RegionRowStyle">

            <TextView
                android:id="@+id/city_text"
                style="@style/RegionRowTitleStyle"
                android:text="@string/city_title" />

            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/DialogOperationTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorRemarks" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#FFCCCCCC" />

        <TextView
            android:id="@+id/btn_ok"
            style="@style/DialogOperationTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>