<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/label_different"
            android:gravity="center"
            android:text="@string/modify"
            android:textColor="@color/colorLabelTextDark"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/add_as_my_label"
            android:textColor="#FF000000"
            android:textSize="18sp" />
    </LinearLayout>

    <include layout="@layout/dialog_horizontal_divider" />

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/DialogOperationTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_false"
            android:textColor="@color/colorRemarks" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#FFCCCCCC" />

        <TextView
            android:id="@+id/btn_ok"
            style="@style/DialogOperationTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_true"
            android:textColor="@color/lcPrimaryColor" />
    </LinearLayout>

</LinearLayout>